# conductorAI

./: conductor.yaml  pyproject.toml  readme.md
docs/: README.md  day-01-foundations.md  day-02-core-abstractions.md  day-03-message-bus-state.md  day-04-error-handler-policy-engine.md  day-05-coordinator-workflow.md  day-06-dev-agents-llm.md  day-07-test-devops-agents.md  day-08-monitor-infrastructure.md  day-09-integrations-facade.md  day-10-end-to-end.md
docs/classdiagram/: 01-core-models.md  02-agent-layer.md  03-orchestration-layer.md  04-infrastructure-integration.md  05-system-architecture.md  README.md
docs/flowcomponents/: 01-workflow-execution-flow.md  02-task-dispatch-flow.md  03-message-routing-flow.md  README.md
docs/sysarchitecture/: architecture-overview.md
docs/templates/: TEMPLATES-README.md  pipeline-templates-guide.md  prompt-template-guide.md  requirements-submission-guide.md
examples/: custom_agent.py  full_workflow.py  sample-project-requirements.yaml  single_agent.py
src/conductor/: __init__.py  facade.py
src/conductor/agents/: __init__.py  base.py
src/conductor/agents/development/: __init__.py  coding_agent.py  review_agent.py  test_agent.py  test_data_agent.py
src/conductor/agents/devops/: __init__.py  deploying_agent.py  devops_agent.py
src/conductor/agents/monitoring/: __init__.py  monitor_agent.py
src/conductor/core/: __init__.py  config.py  enums.py  exceptions.py  messages.py  models.py  state.py
src/conductor/infrastructure/: __init__.py  artifact_store.py
src/conductor/integrations/: __init__.py
src/conductor/integrations/llm/: __init__.py  base.py  factory.py  mock.py
src/conductor/orchestration/: __init__.py  agent_coordinator.py  error_handler.py  message_bus.py  policy_engine.py  state_manager.py  workflow_engine.py
src/conductorai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: agentic-ops-pipeline-template.yaml  data-pipeline-requirements-template.yaml  ml-pipeline-requirements-template.yaml  pipeline-integration-template.yaml  project-requirements-template.yaml  rag-llm-pipeline-template.yaml
tests/: __init__.py  conftest.py  test_facade.py
tests/test_agents/: __init__.py  test_base_agent.py
tests/test_agents/test_development/: test_coding_agent.py  test_review_agent.py  test_test_agent.py  test_test_data_agent.py
tests/test_agents/test_devops/: test_deploying_agent.py  test_devops_agent.py
tests/test_agents/test_monitoring/: test_monitor_agent.py
tests/test_core/: __init__.py  test_config.py  test_messages.py  test_models.py  test_state.py
tests/test_infrastructure/: test_artifact_store.py
tests/test_integration/: test_end_to_end.py
tests/test_integrations/: test_llm_provider.py
tests/test_orchestration/: __init__.py  test_agent_coordinator.py  test_error_handler.py  test_message_bus.py  test_policy_engine.py  test_state_manager.py  test_workflow_engine.py
